--- a/index.html
+++ b/index.html
@@ -1,72 +1,74 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Paleteria</title>
- 
+  <title>Space Cream</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Palanquin&family=Staatliches&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-
-  <div class="page">
-
+  <div class="container">
     <header>
+      <img src="images/icecream_logo.png" alt="logo space cream" id="logo">
 
-      <img 
-      src="images/icecream.png" alt="logo do sorvete">
+      <div class="title">
+        <h1>Space Cream</h1>
+      </div>
 
-      <h1>
-        SPACE CREAM
-      </h1>
-
+      <div class="intro-desktop">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam aliquet, pharetra est in, sagittis lorem.elit. Donec a rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam aliquet, pharetra est in, sagittis lorem. 
+        </p>
+      </div>
     </header>
 
     <main>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing<br>
-        elit. Donec a rhoncus leo. Donec at scelerisque<br> 
-        magna. Nullam vitae neque sit amet erat dignissim<br> 
-        cursus ac ac lectus. Aliquam erat volutpat. Praesent<br>
-        at quam aliquet, 
-      </p>
-
-      <div class="card">
-        <img
-        src="images/icecream1.png" alt="sorvete do 1o card">
-
-        <h3><span>Paletas</span></h3>
+      <div class="text">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam aliquet, 
+        </p>
       </div>
+      <div class="cards">
+        <div class="card">
+          <span>Paletas</span>
+          <img src="images/icecream1.png" alt="">
+        </div>
 
-      <div class="card">
-        <img
-        src="images/icecream2.png" alt="shakes do 2o card">
+        <div class="card">
+          <span>Shakes</span>
+          <img src="images/icecream2.png" alt="">
+        </div>
 
-        <h4><span>Shakes</span></h4>
-      </div>
+        <div class="card">
+          <span>Paletas</span>
+          <img src="images/icecream1.png" alt="">
+        </div>
 
-      <div class="card">
-        <img
-        src="images/icecream3.png" alt="massa de sorvete 3o card">
+        <div class="card">
+          <span>Picolés</span>
+          <img src="images/icecream4.png" alt="">
+        </div>
 
-        <h3><span>Massas</span></h3>
-      </div>
+        <div class="card">
+          <span>Massas</span>
+          <img src="images/icecream3.png" alt="">
+        </div>
 
-      <div class="card">
-        <img
-        src="images/icecream4.png" alt="picolé do 4o card">
-
-        <h4><span>Picolés</span></h4>
+        <div class="card">
+          <span>Picolés</span>
+          <img src="images/icecream4.png" alt="">
+        </div>
       </div>
     </main>
-
+    <footer>
+      <p>fale conosco no instagram <strong> @space_cream</strong></p>
+    </footer>
   </div>
-  
 </body>
 </html>
